feat: fix toList